[SYCL] Image Class Initial Implementation. Patch 1: Implementation of Constructors for image class. Files Added: image.hpp - Includes the interface for image class. detail/image_impl.hpp - Includes the implementation of image_impl class. detail/image_impl.cpp - For now includes the utility functions. Will be 	expanded later as accessor and other APIs are implemented. test/basic_tests/image_constructors.cpp - test to check the image constructors. Next To Do: SPIRV Code generation and accessors implementations.
Signed-off-by: Garima Gupta <garima.gupta@intel.com>

--- a/sycl/CMakeLists.txt
+++ b/sycl/CMakeLists.txt
@@ -130,6 +130,7 @@ add_library("${SYCLLibrary}" SHARED
   "${sourceRootPath}/detail/event_impl.cpp"
   "${sourceRootPath}/detail/force_device.cpp"
   "${sourceRootPath}/detail/helpers.cpp"
+  "${sourceRootPath}/detail/image_impl.cpp"
   "${sourceRootPath}/detail/kernel_impl.cpp"
   "${sourceRootPath}/detail/kernel_info.cpp"
   "${sourceRootPath}/detail/memory_manager.cpp"
