--- a/llvm/lib/Transforms/HC/CMakeLists.txt
+++ b/llvm/lib/Transforms/HC/CMakeLists.txt
@@ -1,3 +1,5 @@
-set(LLVM_ENABLE_PLUGINS ON)
-add_subdirectory(PromotePointerKernArgsToGlobal)
-add_subdirectory(SelectAcceleratorCode)
+if (UNIX)
+  set(LLVM_ENABLE_PLUGINS ON)
+  add_subdirectory(PromotePointerKernArgsToGlobal)
+  add_subdirectory(SelectAcceleratorCode)
+endif()
