--- a/lldb/lit/lit-lldb-init.in
+++ b/lldb/lit/lit-lldb-init.in
@@ -1,3 +1,4 @@
 # LLDB init file for the LIT tests.
+env DYLD_LIBRARY_PATH='@LLDB_SWIFT_LIBS@' LD_LIBRARY_PATH='@LLDB_SWIFT_LIBS@' SIMCTL_CHILD_DYLD_LIBRARY_PATH='@LLDB_SWIFT_LIBS@'
 settings set symbols.enable-external-lookup false
 settings set interpreter.echo-comment-commands false
