--- a/lldb/test/CMakeLists.txt
+++ b/lldb/test/CMakeLists.txt
@@ -31,7 +31,8 @@ option(LLDB_TEST_SWIFT "Use in-tree swift when testing lldb" On)
 if(LLDB_TEST_SWIFT)
   set(SWIFT_TEST_ARGS
     --swift-compiler ${LLDB_SWIFTC}
-    --swift-library ${LLDB_SWIFT_LIBS})
+    --swift-library ${LLDB_SWIFT_LIBS}
+    --env "DYLD_LIBRARY_PATH=\\\"${LLDB_SWIFT_LIBS}\\\" LD_LIBRARY_PATH=\\\"${LLDB_SWIFT_LIBS}\\\" SIMCTL_CHILD_DYLD_LIBRARY_PATH=\\\"${LLDB_SWIFT_LIBS}\\\"")
 endif()
 # END - Swift Mods
 
