[CMake] swift-lldb changes for LLDB.framework tools handling
apple-llvm-split-commit: 775678aa55ee923d6459b77ec0a9928708ca529e
apple-llvm-split-dir: lldb/

--- a/lldb/tools/repl/swift/CMakeLists.txt
+++ b/lldb/tools/repl/swift/CMakeLists.txt
@@ -2,7 +2,7 @@
 if (LLDB_BUILD_FRAMEWORK)
   get_target_property(framework_target_dir liblldb LIBRARY_OUTPUT_DIRECTORY)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath \
-      -Wl,${framework_target_dir}/LLDB.framework/${LLDB_FRAMEWORK_RESOURCE_DIR}/Swift/macosx")
+      -Wl,${framework_target_dir}/LLDB.framework/Versions/${LLDB_FRAMEWORK_VERSION}/Resources/Swift/macosx")
 elseif( CMAKE_SYSTEM_NAME MATCHES "Linux" )
   # Set the correct rpath to locate libswiftCore
   if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "ppc64le")
