--- a/lldb/packages/Python/lldbsuite/test/lang/swift/enum_objc/Makefile
+++ b/lldb/packages/Python/lldbsuite/test/lang/swift/enum_objc/Makefile
@@ -1,3 +1,4 @@
 LEVEL = ../../../make
 SWIFT_SOURCES := main.swift
+SWIFTFLAGS_EXTRAS = -Xcc -I$(SRCDIR) -Xfrontend -validate-tbd-against-ir=none
 include $(LEVEL)/Makefile.rules
