[cmake] adjust NATIVE build for Swift
TableGen is a host tool and requires a native variant for every build.
While building as a part of llvm this is trivial and llvm handles it.
However, building standalone means that lldb has to handle this itself.
Add a NATIVE build variant to enable this.

This was landed upstream and needs SWIFT varaibles added accordingly.

apple-llvm-split-commit: 9e34eccc8be43fc7cc43aeb55d44a10bca7172c8
apple-llvm-split-dir: lldb/

--- a/lldb/CMakeLists.txt
+++ b/lldb/CMakeLists.txt
@@ -50,13 +50,16 @@ endif ()
 if(CMAKE_CROSSCOMPILING AND LLDB_BUILT_STANDALONE)
   set(LLVM_USE_HOST_TOOLS ON)
   include(CrossCompile)
-  if (NOT LLDB_PATH_TO_NATIVE_LLVM_BUILD OR
+  if (NOT LLDB_PATH_TO_NATIVE_SWIFT_BUILD OR
+      NOT LLDB_PATH_TO_NATIVE_LLVM_BUILD OR
       NOT LLDB_PATH_TO_NATIVE_CLANG_BUILD)
     message(FATAL_ERROR
-      "Crosscompiling standalone requires the variables LLDB_PATH_TO_NATIVE_{CLANG,LLVM}_BUILD
+      "Crosscompiling standalone requires the variables LLDB_PATH_TO_NATIVE_{SWIFT,CLANG,LLVM}_BUILD
       for building the native lldb-tblgen used during the build process.")
   endif()
   llvm_create_cross_target(lldb NATIVE "" Release
+    -DLLDB_PATH_TO_SWIFT_SOURCE=${LLDB_PATH_TO_NATIVE_SWIFT_SOURCE}
+    -DLLDB_PATH_TO_SWIFT_BUILD=${LLDB_PATH_TO_NATIVE_SWIFT_BUILD}
     -DLLDB_PATH_TO_LLVM_BUILD=${LLDB_PATH_TO_NATIVE_LLVM_BUILD}
     -DLLDB_PATH_TO_CLANG_BUILD=${LLDB_PATH_TO_NATIVE_CLANG_BUILD})
 endif()
