Fix CMake from previous merge
apple-llvm-split-commit: a07978da7959ae23e08d3a7ff583121170fcad83
apple-llvm-split-dir: lldb/

--- a/lldb/CMakeLists.txt
+++ b/lldb/CMakeLists.txt
@@ -62,6 +62,7 @@ if(CMAKE_CROSSCOMPILING AND LLDB_BUILT_STANDALONE)
     -DLLDB_PATH_TO_SWIFT_BUILD=${LLDB_PATH_TO_NATIVE_SWIFT_BUILD}
     -DLLVM_DIR=${NATIVE_LLVM_DIR}
     -DClang_DIR=${NATIVE_Clang_DIR})
+endif()
 
 add_subdirectory(utils/TableGen)
 add_subdirectory(source)
