--- a/lldb/source/API/CMakeLists.txt
+++ b/lldb/source/API/CMakeLists.txt
@@ -182,7 +182,7 @@ if(EXISTS ${LLDB_PATH_TO_SWIFT_BUILD}/lib${LLVM_LIBDIR_SUFFIX}/swift/clang)
   set(CLANG_RESOURCE_PATH "${LLDB_PATH_TO_SWIFT_BUILD}/lib${LLVM_LIBDIR_SUFFIX}/swift/clang")
 elseif(LLDB_BUILT_STANDALONE)
   set(CLANG_VERSION ${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}.${LLVM_VERSION_PATCH})
-  set(CLANG_RESOURCE_PATH "${LLDB_PATH_TO_CLANG_BUILD}/lib${LLVM_LIBDIR_SUFFIX}/clang/${CLANG_VERSION}")
+  set(CLANG_RESOURCE_PATH "${Clang_DIR}/../../../lib${LLVM_LIBDIR_SUFFIX}/clang/${CLANG_VERSION}")
   if(NOT EXISTS ${CLANG_RESOURCE_PATH})
     message(SEND_ERROR "standalone build cannot locate clang resource directory")
   endif()
