Revert "Always build amdgpu plugin"
This reverts commit 07bcf1e331647431a53af2361609dcc0fce0791a.

Change-Id: Ie44740bcbf466142ad9ef291a53becc62df69d7b

--- a/openmp/libomptarget/plugins/CMakeLists.txt
+++ b/openmp/libomptarget/plugins/CMakeLists.txt
@@ -67,7 +67,9 @@ endmacro()
 
 add_subdirectory(aarch64)
 add_subdirectory(cuda)
-add_subdirectory(amdgpu)
+if (OPENMP_ENABLE_LIBOMPTARGET_HSA)
+  add_subdirectory(amdgpu)
+endif()
 add_subdirectory(ppc64)
 add_subdirectory(ppc64le)
 add_subdirectory(ve)
