Enable MCCAS in next
(cherry picked from commit 54b7ef94674f146e51f78ffd81a7d96735ab976a)

--- a/llvm/lib/MC/CMakeLists.txt
+++ b/llvm/lib/MC/CMakeLists.txt
@@ -32,6 +32,7 @@ add_llvm_component_library(LLVMMC
   MCLinkerOptimizationHint.cpp
   MCMachOStreamer.cpp
   MCMachObjectTargetWriter.cpp
+  MachOCASWriter.cpp
   MCNullStreamer.cpp
   MCObjectFileInfo.cpp
   MCObjectStreamer.cpp
@@ -77,6 +78,8 @@ add_llvm_component_library(LLVMMC
   Support
   TargetParser
   BinaryFormat
+  CAS
+  CASUtil
   DebugInfoCodeView
 
   DEPENDS
