--- a/llvm/lib/CMakeLists.txt
+++ b/llvm/lib/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(CodeGen)
 add_subdirectory(BinaryFormat)
 add_subdirectory(Bitcode)
 add_subdirectory(Bitstream)
+add_subdirectory(CASUtil)
 add_subdirectory(DWARFLinker)
 add_subdirectory(DWARFLinkerParallel)
 add_subdirectory(Extensions)
@@ -23,6 +24,7 @@ add_subdirectory(Linker)
 add_subdirectory(Analysis)
 add_subdirectory(LTO)
 add_subdirectory(MC)
+add_subdirectory(MCCAS)
 add_subdirectory(MCA)
 add_subdirectory(ObjCopy)
 add_subdirectory(Object)
