This patch implements a runtime check whether the system's USM setting matches the one required by the target image. If necessary, the zero-copy mode will be enabled.
Change-Id: Ic9950e15d0ee4664910c1a575e192634f3227898

--- a/openmp/libomptarget/src/CMakeLists.txt
+++ b/openmp/libomptarget/src/CMakeLists.txt
@@ -9,8 +9,16 @@
 # Build offloading library libomptarget.so.
 #
 ##===----------------------------------------------------------------------===##
+# libhsakmt.a
+find_library ( HSAKMT_LIB libhsakmt.a REQURIED HINTS ${CMAKE_INSTALL_PREFIX} PATHS /opt/rocm)
+get_filename_component ( HSAKMT_LIB_PATH ${HSAKMT_LIB} DIRECTORY )
+link_directories (${HSAKMT_LIB_PATH})
 
-libomptarget_say("Building offloading runtime library libomptarget.")
+# lib_amdgpu
+pkg_check_modules(drm_amdgpu REQUIRED IMPORTED_TARGET libdrm_amdgpu)
+
+# libnuma
+find_library(numa libnuma.so REQUIRED HINTS /usr/lib/x86_64-linux-gnu/)
 
 add_llvm_library(omptarget
   SHARED
@@ -61,7 +69,14 @@ endif()
 
 find_library(LLVM_OFFLOAD_ARCH LLVMOffloadArch HINTS ${LLVM_LIBRARY_DIR} ${LLVM_BINARY_DIR} PATH_SUFFIXES lib REQUIRED)
 
-target_link_libraries(omptarget PRIVATE
+target_include_directories(omptarget PRIVATE ${LIBOMPTARGET_INCLUDE_DIR})
+
+target_link_libraries(
+  omptarget
+  PRIVATE hsakmt
+  PRIVATE drm_amdgpu
+  PRIVATE numa
+  PRIVATE
   ${CMAKE_DL_LIBS}
   ${LLVM_OFFLOAD_ARCH}
   "-Wl,--no-allow-shlib-undefined")
