[clang][cas] Add missing dependency on llvm-cas-dump for tests
(cherry picked from commit bbbbc25d8f445a1f548c744d684c2da0a632a465)

--- a/clang/test/CMakeLists.txt
+++ b/clang/test/CMakeLists.txt
@@ -122,6 +122,7 @@ if( NOT CLANG_BUILT_STANDALONE )
     llvm-as
     llvm-bcanalyzer
     llvm-cas
+    llvm-cas-dump
     llvm-cat
     llvm-cxxfilt
     llvm-dis
