Add GENX Dialect build script and conversion functions

--- a/mlir/include/mlir/Dialect/LLVMIR/CMakeLists.txt
+++ b/mlir/include/mlir/Dialect/LLVMIR/CMakeLists.txt
@@ -61,3 +61,9 @@ add_mlir_doc(ROCDLOps ROCDLDialect Dialects/ -gen-dialect-doc -dialect=rocdl)
 set(LLVM_TARGET_DEFINITIONS ROCDLOps.td)
 mlir_tablegen(ROCDLConversions.inc -gen-llvmir-conversions)
 add_public_tablegen_target(MLIRROCDLConversionsIncGen)
+
+add_mlir_dialect(GENXOps genx)
+add_mlir_doc(GENXOps GENXDialect Dialects/ -gen-dialect-doc -dialect=genx)
+set(LLVM_TARGET_DEFINITIONS GENXOps.td)
+mlir_tablegen(GENXConversions.inc -gen-llvmir-conversions)
+add_public_tablegen_target(MLIRGENXConversionsIncGen)
