--- a/mlir/lib/Dialect/LLVMIR/CMakeLists.txt
+++ b/mlir/lib/Dialect/LLVMIR/CMakeLists.txt
@@ -78,3 +78,25 @@ add_mlir_dialect_library(MLIRROCDLDialect
   MLIRSideEffectInterfaces
   MLIRVectorToLLVM
   )
+
+  add_mlir_dialect_library(MLIRGENXDialect
+  IR/GENXDialect.cpp
+
+  ADDITIONAL_HEADER_DIRS
+  ${MLIR_MAIN_INCLUDE_DIR}/mlir/Dialect/LLVMIR
+
+  DEPENDS
+  MLIRGENXOpsIncGen
+  MLIRGENXConversionsIncGen
+  intrinsics_gen
+
+  LINK_COMPONENTS
+  AsmParser
+  Core
+
+  LINK_LIBS PUBLIC
+  MLIRIR
+  MLIRSideEffectInterfaces
+  MLIRVectorToLLVM
+  MLIRLLVMDialect
+  )
