[OpenMP][OmpTest] Initial OmpTest commit
Introduces an initial implementation of an OMPT-based unit testing
framework inspired by GoogleTest. In a unit test, defined via the
OMPTTESTCASE(TestSuite, TestCase) macro, a sequence of OMPT events can
be asserted to happen.
As of now, it needs to be done by hand via the `insert` method of the
SequencedAsserter. Eventually this will be hidden behind a macro.

The file openmp/libomptarget/test/ompTest/src/main.cpp serves as a demo
for both what is currently available and an intial sketch of how the
macros may look like.

As of now, the OMPT events are checked when they happen. This means that
the events
- Device Init
- Device Load
do currently not work for assertions as they happen before the Asserter
object is created. This is likely going to be addressed in future
additions, as it seems to be a critical part.

Change-Id: Id178c5f2b378a3a6ebbecf7deea3bf7f0a52f6cb

--- a/openmp/libomptarget/test/CMakeLists.txt
+++ b/openmp/libomptarget/test/CMakeLists.txt
@@ -40,3 +40,5 @@ add_openmp_testsuite(check-libomptarget
   EXCLUDE_FROM_CHECK_ALL
   DEPENDS omptarget omp ${LIBOMPTARGET_TESTED_PLUGINS}
   ARGS ${LIBOMPTARGET_LIT_ARG_LIST})
+
+add_subdirectory(ompTest)
