[libcxx][libcxxabi][libunwind] Support target-specific flags for tests
There is currently only limited support for passing target-specific
flags (e.g. -mabi= or -march=) to the testsuites if you don't have a
compiler (or wrapper script) that defaults to the expected flags.

While there are parameters to pass --target= and
-isysroot (https://reviews.llvm.org/D151056 tries to extend that to
--sysroot= so the linker can find libraries), building for some targets
e.g. RISC-V may require additional flags when building with Clang.

This change adds a new target_flags parameter to the testsuite that
appends the given flags to %{flags} and can be set from CMake using
`{LIBUNWIND,LIBCXXABI_LIBCXX}_TEST_TARGET_FLAGS.`

--- a/libcxx/test/CMakeLists.txt
+++ b/libcxx/test/CMakeLists.txt
@@ -32,6 +32,10 @@ else()
   serialize_lit_param(target_triple "\"${LLVM_DEFAULT_TARGET_TRIPLE}\"")
 endif()
 
+if (LIBCXX_TEST_TARGET_FLAGS)
+  serialize_lit_param(target_flags "\"${LIBCXX_TEST_TARGET_FLAGS}\"")
+endif()
+
 if (LLVM_USE_SANITIZER)
   serialize_lit_param(use_sanitizer "\"${LLVM_USE_SANITIZER}\"")
 endif()
