[AArch64]: Refactor target parser to use Bitset.
Use Bitset instead of BitMasking for the Architecture Extensions,
because the number of extensions will exceed the bitmask max size.

Change-Id: Id869744514ce89b9ecb50bac033b45eda4d8ceac

--- a/llvm/unittests/TargetParser/CMakeLists.txt
+++ b/llvm/unittests/TargetParser/CMakeLists.txt
@@ -6,8 +6,7 @@ set(LLVM_LINK_COMPONENTS
 add_llvm_unittest(TargetParserTests
   CSKYTargetParserTest.cpp
   Host.cpp
-  ArmTargetParserTest.cpp
-  AArch64TargetParserTest.cpp
+  TargetParserTest.cpp
   TripleTest.cpp
   )
 
