--- a/llvm/utils/gn/secondary/llvm/unittests/TargetParser/BUILD.gn
+++ b/llvm/utils/gn/secondary/llvm/unittests/TargetParser/BUILD.gn
@@ -10,8 +10,7 @@ unittest("TargetParserTests") {
   sources = [
     "CSKYTargetParserTest.cpp",
     "Host.cpp",
-    "ArmTargetParserTest.cpp",
-    "AArch64TargetParserTest.cpp",
+    "TargetParserTest.cpp",
     "TripleTest.cpp",
   ]
 }
