--- a/llvm/utils/gn/secondary/clang/lib/Headers/BUILD.gn
+++ b/llvm/utils/gn/secondary/clang/lib/Headers/BUILD.gn
@@ -253,8 +253,11 @@ copy("Headers") {
     "s390intrin.h",
     "serializeintrin.h",
     "sgxintrin.h",
+    "sha512intrin.h",
     "shaintrin.h",
     "sifive_vector.h",
+    "sm3intrin.h",
+    "sm4intrin.h",
     "smmintrin.h",
     "stdalign.h",
     "stdarg.h",
