Rewrite to key notifications off of labels instead of file paths
The labels are added based on the file paths so we still ultimately end
up with file path based subscriptions, but using labels as an intermediary
gives us more flexibility.

--- a/.github/workflows/pr-subscriber.yml
+++ b/.github/workflows/pr-subscriber.yml
@@ -3,7 +3,7 @@ name: PR Subscriber
 on:
   pull_request:
     types:
-      - opened
+      - labeled
 
 permissions:
   contents: read
@@ -20,8 +20,12 @@ jobs:
           pip install -r requirements.txt
 
       - name: Update watchers
+        # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
+        env:
+          LABEL_NAME: ${{ github.event.label.name }}
         run: |
           ./github-automation.py \
           --token '${{ secrets.ISSUE_SUBSCRIBER_TOKEN }}' \
           pr-subscriber \
           --issue-number '${{ github.event.pull_request.number }}'
+          --label-name "$LABEL_NAME"
