--- a/llvm/lib/Frontend/CMakeLists.txt
+++ b/llvm/lib/Frontend/CMakeLists.txt
@@ -1,3 +1,1 @@
-add_subdirectory(HLSL)
-add_subdirectory(OpenACC)
-add_subdirectory(OpenMP)
+add_subdirectory(HLSL) add_subdirectory(OpenACC) add_subdirectory(OpenMP)
