--- a/llvm/lib/Frontend/HLSL/CMakeLists.txt
+++ b/llvm/lib/Frontend/HLSL/CMakeLists.txt
@@ -1,14 +1,10 @@
-add_llvm_component_library(LLVMFrontendHLSL
-  HLSLResource.cpp
+add_llvm_component_library(LLVMFrontendHLSL HLSLResource.cpp
 
-  ADDITIONAL_HEADER_DIRS
-  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Frontend
-  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Frontend/HLSL
+                               ADDITIONAL_HEADER_DIRS ${LLVM_MAIN_INCLUDE_DIR} /
+                           llvm / Frontend ${LLVM_MAIN_INCLUDE_DIR} / llvm /
+                           Frontend /
+                           HLSL
 
-  DEPENDS
-  intrinsics_gen
+                               DEPENDS intrinsics_gen
 
-  LINK_COMPONENTS
-  Core
-  Support
-  )
+                                   LINK_COMPONENTS Core Support)
