--- a/llvm/lib/Frontend/OpenACC/CMakeLists.txt
+++ b/llvm/lib/Frontend/OpenACC/CMakeLists.txt
@@ -1,13 +1,10 @@
-add_llvm_component_library(LLVMFrontendOpenACC
-  ACC.cpp
+add_llvm_component_library(LLVMFrontendOpenACC ACC.cpp
 
-  ADDITIONAL_HEADER_DIRS
-  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Frontend
-  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Frontend/OpenACC
+                               ADDITIONAL_HEADER_DIRS ${LLVM_MAIN_INCLUDE_DIR} /
+                           llvm / Frontend ${LLVM_MAIN_INCLUDE_DIR} / llvm /
+                           Frontend /
+                           OpenACC
 
-  DEPENDS
-  acc_gen
-)
+                               DEPENDS acc_gen)
 
-target_link_libraries(LLVMFrontendOpenACC LLVMSupport)
-
+    target_link_libraries(LLVMFrontendOpenACC LLVMSupport)
