--- a/llvm/lib/Frontend/OpenMP/CMakeLists.txt
+++ b/llvm/lib/Frontend/OpenMP/CMakeLists.txt
@@ -1,23 +1,11 @@
-add_llvm_component_library(LLVMFrontendOpenMP
-  OMP.cpp
-  OMPContext.cpp
-  OMPIRBuilder.cpp
+add_llvm_component_library(
+    LLVMFrontendOpenMP OMP.cpp OMPContext.cpp OMPIRBuilder.cpp
 
-  ADDITIONAL_HEADER_DIRS
-  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Frontend
-  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Frontend/OpenMP
+        ADDITIONAL_HEADER_DIRS ${LLVM_MAIN_INCLUDE_DIR} /
+    llvm / Frontend ${LLVM_MAIN_INCLUDE_DIR} / llvm / Frontend /
+    OpenMP
 
-  DEPENDS
-  intrinsics_gen
-  omp_gen
+        DEPENDS intrinsics_gen omp_gen
 
-  LINK_COMPONENTS
-  Core
-  Support
-  TargetParser
-  TransformUtils
-  Analysis
-  MC
-  Scalar
-  BitReader
-  )
+            LINK_COMPONENTS Core Support TargetParser TransformUtils Analysis MC
+                Scalar BitReader)
