--- a/llvm/lib/InterfaceStub/CMakeLists.txt
+++ b/llvm/lib/InterfaceStub/CMakeLists.txt
@@ -1,12 +1,4 @@
-add_llvm_component_library(LLVMInterfaceStub
-  ELFObjHandler.cpp
-  IFSHandler.cpp
-  IFSStub.cpp
+add_llvm_component_library(
+    LLVMInterfaceStub ELFObjHandler.cpp IFSHandler.cpp IFSStub.cpp
 
-  LINK_COMPONENTS
-  BinaryFormat
-  MC
-  Object
-  Support
-  TargetParser
-)
+        LINK_COMPONENTS BinaryFormat MC Object Support TargetParser)
