[libc] Remove common_libc_tuners.cmake and move options into config.json.
The name has been changed to adhere to the config option naming format.
The necessary build changes to use the new option have also been made.

--- a/libc/config/config.json
+++ b/libc/config/config.json
@@ -12,5 +12,11 @@
       "value": false,
       "doc": "Disable handling of %n in printf format string."
     }
+  },
+  "string": {
+    "LIBC_CONF_STRING_UNSAFE_WIDE_READ": {
+      "value": false,
+      "doc": "Read more than a byte at a time to perform byte-string operations like strlen."
+    }
   }
 }
