[llvm-libgcc][CMake] Improve standalone build for llvm-libgcc

--- a/llvm-libgcc/CMakeLists.txt
+++ b/llvm-libgcc/CMakeLists.txt
@@ -6,6 +6,18 @@ cmake_minimum_required(VERSION 3.20.0)
 
 set(LLVM_COMMON_CMAKE_UTILS "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
 
+# Check if llvm-libgcc is built as a standalone project
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR OR LLVM_LIBGCC_STANDALONE_BUILD)
+  project(llvm-libgcc LANGUAGES C CXX ASM)
+  set(COMPILER_RT_STANDALONE_BUILD ON)
+  set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+  set(LLVM_LIBGCC_COMPILER_RT_BINARY_DIR "compiler-rt")
+  set(LLVM_LIBGCC_LIBUNWIND_BINARY_DIR "libunwind")
+else()
+  set(LLVM_LIBGCC_COMPILER_RT_BINARY_DIR "../compiler-rt")
+  set(LLVM_LIBGCC_LIBUNWIND_BINARY_DIR "../libunwind")
+endif()
+
 # Add path for custom modules
 list(INSERT CMAKE_MODULE_PATH 0
   "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
@@ -13,7 +25,7 @@ list(INSERT CMAKE_MODULE_PATH 0
   "${CMAKE_CURRENT_SOURCE_DIR}/../runtimes/cmake/Modules"
   "${LLVM_COMMON_CMAKE_UTILS}"
   "${LLVM_COMMON_CMAKE_UTILS}/Modules"
-  )
+)
 
 set(LLVM_LIBGCC_LIBUNWIND_PATH "${CMAKE_CURRENT_LIST_DIR}/../libunwind"
   CACHE PATH "Specify path to libunwind source.")
@@ -76,14 +88,14 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LLVM_LIBGCC_LIBRARY_DIR})
 
 set(COMPILER_RT_BUILD_BUILTINS ON)
 set(COMPILER_RT_BUILTINS_HIDE_SYMBOLS OFF)
-add_subdirectory(${LLVM_LIBGCC_COMPILER_RT_PATH} "../compiler-rt")
+add_subdirectory(${LLVM_LIBGCC_COMPILER_RT_PATH} ${LLVM_LIBGCC_COMPILER_RT_BINARY_DIR})
 
 set(LIBUNWIND_ENABLE_STATIC ON)
 set(LIBUNWIND_ENABLE_SHARED ON)
 set(LIBUNWIND_USE_COMPILER_RT OFF)
 set(LIBUNWIND_HAS_GCC_LIB OFF)
 set(LIBUNWIND_HAS_GCC_S_LIB OFF)
-add_subdirectory(${LLVM_LIBGCC_LIBUNWIND_PATH} "../libunwind")
+add_subdirectory(${LLVM_LIBGCC_LIBUNWIND_PATH} ${LLVM_LIBGCC_LIBUNWIND_BINARY_DIR})
 
 add_custom_target(gcc_s.ver
   SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/gcc_s.ver.in
