[MLIR] Remove ArithDialect dependency from Dialect/Utils
This commit moves the inferExpandShapeOutputShape utility from the
Dialect/Utils/ReshapeOpsUtils.cpp to Arith/Utils/Utils.cpp in order to
remove specific dialect dependencies from the DialectUtils.

Signed-Off-by: Gaurav Shukla <gaurav.shukla@amd.com>

--- a/utils/bazel/llvm-project-overlay/mlir/BUILD.bazel
+++ b/utils/bazel/llvm-project-overlay/mlir/BUILD.bazel
@@ -3875,7 +3875,6 @@ cc_library(
     includes = ["include"],
     deps = [
         ":DialectUtilsIncGen",
-        ":ArithDialect",
         ":IR",
         ":Support",
         "//llvm:Support",
@@ -12636,6 +12635,7 @@ cc_library(
     deps = [
         ":ArithDialect",
         ":ComplexDialect",
+        ":DialectUtils",
         ":IR",
         "//llvm:Support",
     ],
