Fix endline comment alignment, inline constructor definition alignment, variable name alignment with bit field

--- a/clang/unittests/CMakeLists.txt
+++ b/clang/unittests/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory(CrossTU)
 add_subdirectory(Tooling)
 add_subdirectory(Introspection)
 add_subdirectory(Format)
+add_subdirectory(TWClangFormat)
 add_subdirectory(Frontend)
 add_subdirectory(Rewrite)
 add_subdirectory(Sema)
