--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -256,12 +256,11 @@ unset(SHOULD_ENABLE_PROJECT)
 # Build llvm with ccache if the package is present
 set(LLVM_CCACHE_BUILD OFF CACHE BOOL "Set to ON for a ccache enabled build")
 if(LLVM_CCACHE_BUILD)
-  if(${CMAKE_SYSTEM_NAME} MATCHES "AIX")
-    set(ccache_bin_name ccache-swig)
-  else()
-    set(ccache_bin_name ccache)
+  find_program(CCACHE_PROGRAM ccache)
+  if (NOT CCACHE_PROGRAM)
+    find_program(CCACHE_PROGRAM ccache-swig)
   endif()
-  find_program(CCACHE_PROGRAM ${ccache_bin_name})
+
   if(CCACHE_PROGRAM)
     set(LLVM_CCACHE_MAXSIZE "" CACHE STRING "Size of ccache")
     set(LLVM_CCACHE_DIR "" CACHE STRING "Directory to keep ccached data")
