Compile with -O3 flag

--- a/clang/tools/thebesttv/CMakeLists.txt
+++ b/clang/tools/thebesttv/CMakeLists.txt
@@ -15,8 +15,8 @@ if(NOT TARGET spdlog)
 endif()
 
 # add debug
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -O0")
-# set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+# set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -O0")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
 # enable exceptions
 target_compile_options(thebesttv PRIVATE -fexceptions)
