--- a/clang/test/Driver/lit.local.cfg
+++ b/clang/test/Driver/lit.local.cfg
@@ -49,3 +49,7 @@ if llvm_config.use_lld(required=False):
 
 if config.ppc_linux_default_ieeelongdouble:
     config.available_features.add("ppc_linux_default_ieeelongdouble")
+
+if config.per_target_runtime_dir:
+    config.available_features.add("per_target_runtime_dir")
+config.recursiveExpansionLimit = 2
