Now that we explicitely specify a perl interpreter we should no longer use lit.util.which so we don't pick up scan-build.bat on windows

--- a/clang/test/Analysis/scan-build/lit.local.cfg
+++ b/clang/test/Analysis/scan-build/lit.local.cfg
@@ -1,6 +1,5 @@
 # -*- Python -*-
 
-import lit.util
 import lit.formats
 import os
 
@@ -15,9 +14,8 @@ config.substitutions.append(
         "'%s' '%s' --use-analyzer=%s "
         % (
             config.perl_executable,
-            lit.util.which(
-                "scan-build",
-                os.path.join(config.clang_src_dir, "tools", "scan-build", "bin"),
+            os.path.join(
+                config.clang_src_dir, "tools", "scan-build", "bin", "scan-build"
             ),
             clang_path,
         ),
