Disable scan-build tests on windows

--- a/clang/test/Analysis/scan-build/lit.local.cfg
+++ b/clang/test/Analysis/scan-build/lit.local.cfg
@@ -2,6 +2,7 @@
 
 import lit.formats
 import os
+import platform
 
 use_lit_shell = os.environ.get("LIT_USE_INTERNAL_SHELL")
 config.test_format = lit.formats.ShTest(use_lit_shell == "0")
@@ -22,5 +23,5 @@ config.substitutions.append(
     )
 )
 
-if not config.perl_executable:
+if not config.perl_executable or platform.system() == "Windows":
     config.unsupported = True
